src/core-crm/objects/Package_Component__c/Package_Component__c.object-meta.xml
<CustomObject>
    <label>Package Component</label>
    <nameField>
        <displayFormat>PC-{000000000}</displayFormat>
        <label>Package Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>