src/core-crm/objects/Package_Component__c/fields/Application_Preference__c.field-meta.xml
<CustomField>
    <fullName>Application_Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referencing the application preference the course belongs to</description>
    <label>Application Preference</label>
    <referenceTo>Application_Preference__c</referenceTo>
    <relationshipLabel>Package Components</relationshipLabel>
    <relationshipName>Package_Components</relationshipName>
    <type>Lookup</type>
</CustomField>