src/core-crm/objects/Package_Component__c/fields/CRICOS_Code__c.field-meta.xml
<CustomField>
    <fullName>CRICOS_Code__c</fullName>
    <description>Commonwealth Register of Institutions and Courses for Overseas Students</description>
    <label>CRICOS Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>