src/core-crm/objects/Package_Component__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The expected end date of the program</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>