src/core-crm/objects/Package_Component__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <description>The Faculty owning the Program</description>
    <label>Faculty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>