src/core-crm/objects/Package_Component__c/fields/Intake_Year__c.field-meta.xml
<CustomField>
    <fullName>Intake_Year__c</fullName>
    <description>The Intake year the program is due to start</description>
    <label>Intake Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>