src/core-crm/objects/Package_Component__c/fields/Is_Pathway_Primary_Program__c.field-meta.xml
<CustomField>
    <fullName>Is_Pathway_Primary_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicating the Program that the pathway is intended to lead to</description>
    <label>Is Pathway Primary Program</label>
    <type>Checkbox</type>
</CustomField>