src/core-crm/objects/Package_Component__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The program location</description>
    <label>Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>