src/core-crm/objects/Package_Component__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <description>The StudyLink major associated with the program for the preference</description>
    <label>Major</label>
    <length>255</length>
    <type>Text</type>
</CustomField>