src/core-crm/objects/Package_Component__c/fields/Package_Component_No__c.field-meta.xml
<CustomField>
    <fullName>Package_Component_No__c</fullName>
    <description>The Package Component No which also shows the sequencing of the courses in the package</description>
    <label>Package Component No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>