src/core-crm/objects/Package_Component__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <description>The StudyLink course code</description>
    <label>Program Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>