src/core-crm/objects/Package_Component__c/fields/Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Program_Level__c</fullName>
    <description>The StudyLink Program Level</description>
    <label>Program Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>