src/core-crm/objects/Package_Component__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>The StudyLink program name</description>
    <label>Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>