src/core-crm/objects/Package_Component__c/fields/Program_URL__c.field-meta.xml
<CustomField>
    <fullName>Program_URL__c</fullName>
    <description>The URL of the course information on QUT Website</description>
    <label>Program URL</label>
    <type>Url</type>
</CustomField>