src/core-crm/objects/Package_Component__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The expected start date of the program</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>