src/core-crm/objects/Package_Component__c/fields/Study_Mode__c.field-meta.xml
<CustomField>
    <fullName>Study_Mode__c</fullName>
    <description>The study mode of the program eg Internal Full time</description>
    <label>Study Mode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>