src/core-crm/objects/Package_Component__c/fields/Study_Period_Code__c.field-meta.xml
<CustomField>
    <fullName>Study_Period_Code__c</fullName>
    <description>The StudyLink study period code the program is due to start</description>
    <label>Study Period Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>